2007-12-27  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Ide.Gui.Pads/DefaultMonitorPad.cs,
	  MonoDevelop.Ide.Gui/OutputProgressMonitor.cs: Make the GUI monitor pad
	  thread safe for certain operations, with optimisations for large
	  quantities raw text. The progress monitor can now avoid two remoting
	  calls per line of output to context switch into the GUI thread. This
	  also reduces pad updates on the GUI thread to maximum of one per 100ms.
	  Fixes "Bug 350611 - MonoDevelop hangs when running program that dumps
	  large amounts of output to console". This might be leaking memory, but
	  I'm not certain, as it may be fragmentation instead. Either way it's
	  better than a hang.

2007-12-20  Ankit Jain  <jankit@novell.com>

	* MonoDevelop.Ide.Templates/FileTemplateReference.cs (AddToProject): Use
	'this.name' instead of 'nameNotUsed' as the filename. Fixes creation of
	asp.net projects.

2007-12-18  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Templates/FileTemplateReference.cs: Don't call Create in
	  AddToProject because Create opens the files in the editor.

2007-12-18  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Commands/HelpCommands.cs, MonoDevelop.Ide.addin.xml: Added
	  default handler for the help command that starts Monodoc.

2007-12-17  Aaron Bockover <abockover@novell.com>

	* MonoDevelop.Ide.Gui/DefaultWorkbench.cs: If the monodevelop icon is 
	in the default icon theme, make it the default window icon for any of
	the process' windows, otherwise just set the window icon to the old
	resource

2007-12-17  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Commands/FileCommands.cs: Moved Freedesktop.RecentFiles
	  classes to MonoDevelop.Core.Gui namespace.

2007-12-14  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui/SdiWorkspaceLayout.cs: By adding new pads just before
	  __top/__bottom/__left/__right, the pads will be added in order from left
	  to right.
